Up to semaphore

--- a/semaforo.html
+++ b/semaforo.html
@@ -11,6 +11,8 @@
     <title>F1Desktop - Juegos</title>
 
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo/layout.css">
+    <link rel="stylesheet" type="text/css" href="estilo/semaforo.css">
     <link rel="icon" type="image/ico" href="multimedia/imágenes/f1icon.ico" sizes="16x16"> 
 
 </head>
@@ -28,20 +30,15 @@
             <a href="viajes.html" title="Viajes">Viajes</a>
             <a href="juegos.html" title="Juegos">Juegos</a>
             <a href="memoria.html" title="Memoria">Memoria</a>
-            <a href="semaforo.html" title="Semaforo">Semáforo</a>
+            <a href="semaforo.html" title="Semaforo" class="active">Semáforo</a>
         </nav>
     </header>
     <p>Estás en: <a href="index.html" title="Inicio">Inicio</a> >> <a href="juegos.html" title="Juegos">Juegos</a> >> Semáforo</p>
+    <main>
+        
+    </main>
 
-    <h2>Semáforo</h2>
-    <p>En desarrollo...</p>
-
-    <section>
-        <h3></h3>
-        <div>x4 aqui</div>
-        <button>x2 aqui</button>
-        <p>Informacion</p>
-    </section>
+    <script src="js/semaforo.js"></script>
 </body>
 
 </html>
